[BUGFIX] Avoid clipping of footer meta menu focus styles

--- a/Resources/Public/Scss/components/_footer.scss
+++ b/Resources/Public/Scss/components/_footer.scss
@@ -138,7 +138,6 @@ $footer-sections: map-merge(
 // Footer Meta
 // --------------------------------------------------
 .footer-meta {
-    overflow: hidden;
     .meta-menu {
         margin: 0;
         list-style: none;
